# notification-service

./: README.md  pyproject.toml
.github/workflows/: ci.yml  scip.yml
src/notification_service/: __init__.py  app.py  config.py  lifecycle.py  main.py  routes.py  schemas.py  service.py
